test/test_units/test_kclvm/test_types/invalid_test_data/select_attr/select_attr_1.k
name = "Alice".err_upper()